--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>To do list</title>
 </head>
 <body>
-    <h1>Hello !</h1>
+    <div class="container">
+      <h2>Today's To Do</h2>
+      <input type="text" placeholder="Add to your list..." class="inputAdd">
+      <ul></ul>
+      <button>Clear all completed</button>
+    </div>
 </body>
 </html>
