--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <h2>Today's To Do</h2>
       <input type="text" placeholder="Add to your list..." class="inputAdd">
       <ul></ul>
-      <button>Clear all completed</button>
+      <button class="clearBtn">Clear all completed</button>
     </div>
 </body>
 </html>
