--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-      <h2>Today's To Do</h2>
+      <h2 class="header">Today's To Do</h2>
       <input type="text" placeholder="Add to your list..." class="inputAdd">
       <ul></ul>
       <button class="clearBtn">Clear all completed</button>
